correction bug/format dates

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -589,9 +589,9 @@
     "while(last >= temp):\n",
     "    week_days.append(date_to_str(temp))\n",
     "    temp = temp + datetime.timedelta(days=7)\n",
-    "    \n",
+    "\n",
     "with open('../data/week_days.js', 'w') as f:\n",
-    "    f.write(\"week_days = \" + str(week_days).replace('\\'', ''))"
+    "    f.write(\"week_days = \" + str(week_days).replace('\\'', '\\\"'))"
    ]
   },
   {
@@ -1856,7 +1856,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = df_viewing_activity.to_json(orient=\"records\")\n",
+    "for i in df.index:\n",
+    "    df[\"Date\"][i] = date_to_str(str_to_date(df[\"Date\"][i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = df.to_json(orient=\"records\")\n",
     "\n",
     "parsed = json.loads(result)\n",
     "\n",
@@ -1875,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1896,7 @@
        " 'Hana': {'Smartphone': 38598.14999999996, 'Ordinateur': 220.31666666666666}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
