--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -280,6 +280,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visu 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1884,6 +1898,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visu 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1922,6 +1943,316 @@
    "source": [
     "with open('../data/device_type.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(device_type, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visu 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Both': {0: 0,\n",
+       "  1: 0,\n",
+       "  2: 0,\n",
+       "  3: 0,\n",
+       "  4: 0,\n",
+       "  5: 0,\n",
+       "  6: 0,\n",
+       "  7: 368.29999999999995,\n",
+       "  8: 236.88333333333333,\n",
+       "  9: 175.71666666666667,\n",
+       "  10: 106.93333333333334,\n",
+       "  11: 228.2,\n",
+       "  12: 272.75,\n",
+       "  13: 0,\n",
+       "  14: 65.05,\n",
+       "  15: 0,\n",
+       "  16: 155.48333333333335,\n",
+       "  17: 123.16666666666666,\n",
+       "  18: 0,\n",
+       "  19: 132.76666666666668,\n",
+       "  20: 128.56666666666666,\n",
+       "  21: 125.75,\n",
+       "  22: 43.38333333333333,\n",
+       "  23: 0,\n",
+       "  24: 105.39999999999999,\n",
+       "  25: 190.01666666666665,\n",
+       "  26: 0,\n",
+       "  27: 143.85,\n",
+       "  28: 31.816666666666666,\n",
+       "  29: 54.63333333333333,\n",
+       "  30: 88.48333333333333,\n",
+       "  31: 0,\n",
+       "  32: 0,\n",
+       "  33: 0,\n",
+       "  34: 0,\n",
+       "  35: 52.0,\n",
+       "  36: 35.13333333333333,\n",
+       "  37: 127.76666666666668,\n",
+       "  38: 312.4666666666667,\n",
+       "  39: 169.81666666666666,\n",
+       "  40: 170.70000000000002,\n",
+       "  41: 51.31666666666667,\n",
+       "  42: 246.96666666666667,\n",
+       "  43: 0,\n",
+       "  44: 123.85000000000001,\n",
+       "  45: 194.08333333333331,\n",
+       "  46: 0,\n",
+       "  47: 53.8,\n",
+       "  48: 0,\n",
+       "  49: 241.23333333333335,\n",
+       "  50: 9.983333333333333,\n",
+       "  51: 76.55000000000001,\n",
+       "  52: 139.60000000000002,\n",
+       "  53: 0,\n",
+       "  54: 0,\n",
+       "  55: 0,\n",
+       "  56: 110.85000000000001,\n",
+       "  57: 82.39999999999999,\n",
+       "  58: 133.66666666666666,\n",
+       "  59: 146.01666666666668,\n",
+       "  60: 95.66666666666667,\n",
+       "  61: 229.51666666666665,\n",
+       "  62: 325.2,\n",
+       "  63: 326.3666666666666,\n",
+       "  64: 227.35000000000002,\n",
+       "  65: 125.78333333333333,\n",
+       "  66: 0,\n",
+       "  67: 0,\n",
+       "  68: 437.08333333333337,\n",
+       "  69: 0,\n",
+       "  70: 79.01666666666667,\n",
+       "  71: 0,\n",
+       "  72: 0,\n",
+       "  73: 112.71666666666665,\n",
+       "  74: 21.816666666666666,\n",
+       "  75: 0,\n",
+       "  76: 42.41666666666667,\n",
+       "  77: 0,\n",
+       "  78: 42.68333333333334,\n",
+       "  79: 0,\n",
+       "  80: 42.35,\n",
+       "  81: 35.150000000000006,\n",
+       "  82: 49.150000000000006,\n",
+       "  83: 84.11666666666667,\n",
+       "  84: 0},\n",
+       " 'Hana': {0: 218.73333333333332,\n",
+       "  1: 718.1333333333334,\n",
+       "  2: 518.6333333333333,\n",
+       "  3: 458.41666666666663,\n",
+       "  4: 961.2833333333334,\n",
+       "  5: 783.5333333333333,\n",
+       "  6: 267.8666666666667,\n",
+       "  7: 324.28333333333336,\n",
+       "  8: 600.3666666666667,\n",
+       "  9: 681.0166666666665,\n",
+       "  10: 759.85,\n",
+       "  11: 114.51666666666668,\n",
+       "  12: 745.7166666666667,\n",
+       "  13: 646.9999999999999,\n",
+       "  14: 495.23333333333335,\n",
+       "  15: 426.73333333333335,\n",
+       "  16: 105.06666666666666,\n",
+       "  17: 518.1500000000001,\n",
+       "  18: 1037.7166666666665,\n",
+       "  19: 827.9333333333334,\n",
+       "  20: 826.5166666666667,\n",
+       "  21: 236.33333333333331,\n",
+       "  22: 285.58333333333326,\n",
+       "  23: 272.1000000000001,\n",
+       "  24: 234.43333333333334,\n",
+       "  25: 218.40000000000003,\n",
+       "  26: 282.03333333333336,\n",
+       "  27: 512.1166666666666,\n",
+       "  28: 112.44999999999999,\n",
+       "  29: 355.55,\n",
+       "  30: 441.06666666666666,\n",
+       "  31: 637.6999999999999,\n",
+       "  32: 600.5,\n",
+       "  33: 591.9333333333333,\n",
+       "  34: 607.4000000000001,\n",
+       "  35: 936.183333333333,\n",
+       "  36: 1285.9500000000003,\n",
+       "  37: 706.9166666666666,\n",
+       "  38: 525.3833333333334,\n",
+       "  39: 741.9166666666666,\n",
+       "  40: 505.4833333333333,\n",
+       "  41: 347.8166666666666,\n",
+       "  42: 878.6500000000002,\n",
+       "  43: 137.21666666666667,\n",
+       "  44: 827.5833333333331,\n",
+       "  45: 390.1333333333333,\n",
+       "  46: 374.8,\n",
+       "  47: 752.8999999999997,\n",
+       "  48: 748.2166666666666,\n",
+       "  49: 191.8,\n",
+       "  50: 590.9666666666668,\n",
+       "  51: 611.9666666666668,\n",
+       "  52: 372.45,\n",
+       "  53: 83.55000000000001,\n",
+       "  54: 0,\n",
+       "  55: 0,\n",
+       "  56: 63.483333333333334,\n",
+       "  57: 118.68333333333334,\n",
+       "  58: 253.71666666666667,\n",
+       "  59: 96.51666666666667,\n",
+       "  60: 415.53333333333336,\n",
+       "  61: 85.51666666666667,\n",
+       "  62: 134.14999999999998,\n",
+       "  63: 87.08333333333333,\n",
+       "  64: 458.8666666666667,\n",
+       "  65: 602.6666666666667,\n",
+       "  66: 628.4999999999999,\n",
+       "  67: 168.03333333333333,\n",
+       "  68: 19.0,\n",
+       "  69: 85.55,\n",
+       "  70: 584.8833333333333,\n",
+       "  71: 511.86666666666673,\n",
+       "  72: 297.18333333333334,\n",
+       "  73: 306.50000000000006,\n",
+       "  74: 719.2166666666669,\n",
+       "  75: 577.1833333333334,\n",
+       "  76: 543.4666666666667,\n",
+       "  77: 491.7,\n",
+       "  78: 372.9833333333333,\n",
+       "  79: 477.51666666666677,\n",
+       "  80: 612.1166666666667,\n",
+       "  81: 139.9,\n",
+       "  82: 435.68333333333334,\n",
+       "  83: 432.0166666666667,\n",
+       "  84: 365.3333333333333},\n",
+       " 'Tarik': {0: 904.6833333333333,\n",
+       "  1: 1491.2000000000003,\n",
+       "  2: 168.03333333333333,\n",
+       "  3: 560.2500000000001,\n",
+       "  4: 341.9666666666667,\n",
+       "  5: 1205.6499999999996,\n",
+       "  6: 879.0333333333334,\n",
+       "  7: 270.45,\n",
+       "  8: 309.7,\n",
+       "  9: 0,\n",
+       "  10: 0,\n",
+       "  11: 159.55,\n",
+       "  12: 0,\n",
+       "  13: 0,\n",
+       "  14: 346.0166666666666,\n",
+       "  15: 309.18333333333334,\n",
+       "  16: 33.03333333333333,\n",
+       "  17: 529.95,\n",
+       "  18: 15.35,\n",
+       "  19: 15.183333333333334,\n",
+       "  20: 0,\n",
+       "  21: 0,\n",
+       "  22: 0,\n",
+       "  23: 261.56666666666666,\n",
+       "  24: 74.44999999999999,\n",
+       "  25: 138.79999999999998,\n",
+       "  26: 371.29999999999995,\n",
+       "  27: 505.33333333333337,\n",
+       "  28: 294.9,\n",
+       "  29: 579.9666666666667,\n",
+       "  30: 393.48333333333335,\n",
+       "  31: 443.29999999999995,\n",
+       "  32: 89.53333333333333,\n",
+       "  33: 224.44999999999996,\n",
+       "  34: 11.733333333333333,\n",
+       "  35: 0,\n",
+       "  36: 187.33333333333334,\n",
+       "  37: 193.85,\n",
+       "  38: 0,\n",
+       "  39: 0,\n",
+       "  40: 0,\n",
+       "  41: 312.5,\n",
+       "  42: 295.8666666666666,\n",
+       "  43: 122.68333333333334,\n",
+       "  44: 179.75,\n",
+       "  45: 0,\n",
+       "  46: 54.81666666666666,\n",
+       "  47: 0,\n",
+       "  48: 0,\n",
+       "  49: 128.71666666666664,\n",
+       "  50: 0,\n",
+       "  51: 237.26666666666668,\n",
+       "  52: 26.233333333333334,\n",
+       "  53: 0,\n",
+       "  54: 0,\n",
+       "  55: 0,\n",
+       "  56: 0,\n",
+       "  57: 0,\n",
+       "  58: 61.45,\n",
+       "  59: 304.68333333333334,\n",
+       "  60: 321.4333333333334,\n",
+       "  61: 136.25,\n",
+       "  62: 124.33333333333334,\n",
+       "  63: 134.85,\n",
+       "  64: 0,\n",
+       "  65: 0,\n",
+       "  66: 0,\n",
+       "  67: 46.81666666666667,\n",
+       "  68: 272.8333333333333,\n",
+       "  69: 127.48333333333333,\n",
+       "  70: 482.50000000000006,\n",
+       "  71: 942.6333333333334,\n",
+       "  72: 151.79999999999998,\n",
+       "  73: 254.61666666666665,\n",
+       "  74: 387.7833333333334,\n",
+       "  75: 167.5,\n",
+       "  76: 0,\n",
+       "  77: 0,\n",
+       "  78: 0,\n",
+       "  79: 0,\n",
+       "  80: 0,\n",
+       "  81: 0,\n",
+       "  82: 0,\n",
+       "  83: 0,\n",
+       "  84: 9.133333333333333}}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewing_activity\n",
+    "\n",
+    "week_activity = {\"Both\": {}, \"Hana\": {}, \"Tarik\": {}}\n",
+    "\n",
+    "\n",
+    "for i in range(len(week_days)):\n",
+    "    for k, v in week_activity.items():\n",
+    "        week_activity[k][i] = 0 \n",
+    "\n",
+    "for i in viewing_activity.index:\n",
+    "    if viewing_activity[\"Duration\"][i] > 3:\n",
+    "        week_activity[viewing_activity[\"Profile Name\"][i]][get_week_number(viewing_activity[\"Date\"][i])] \\\n",
+    "                += viewing_activity[\"Duration\"][i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/week_activity.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(week_activity, f, ensure_ascii=False, indent=4)"
    ]
   }
  ],
