--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1961,274 +1961,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Both': {0: 0,\n",
-       "  1: 0,\n",
-       "  2: 0,\n",
-       "  3: 0,\n",
-       "  4: 0,\n",
-       "  5: 0,\n",
-       "  6: 0,\n",
-       "  7: 368.29999999999995,\n",
-       "  8: 236.88333333333333,\n",
-       "  9: 175.71666666666667,\n",
-       "  10: 106.93333333333334,\n",
-       "  11: 228.2,\n",
-       "  12: 272.75,\n",
-       "  13: 0,\n",
-       "  14: 65.05,\n",
-       "  15: 0,\n",
-       "  16: 155.48333333333335,\n",
-       "  17: 123.16666666666666,\n",
-       "  18: 0,\n",
-       "  19: 132.76666666666668,\n",
-       "  20: 128.56666666666666,\n",
-       "  21: 125.75,\n",
-       "  22: 43.38333333333333,\n",
-       "  23: 0,\n",
-       "  24: 105.39999999999999,\n",
-       "  25: 190.01666666666665,\n",
-       "  26: 0,\n",
-       "  27: 143.85,\n",
-       "  28: 31.816666666666666,\n",
-       "  29: 54.63333333333333,\n",
-       "  30: 88.48333333333333,\n",
-       "  31: 0,\n",
-       "  32: 0,\n",
-       "  33: 0,\n",
-       "  34: 0,\n",
-       "  35: 52.0,\n",
-       "  36: 35.13333333333333,\n",
-       "  37: 127.76666666666668,\n",
-       "  38: 312.4666666666667,\n",
-       "  39: 169.81666666666666,\n",
-       "  40: 170.70000000000002,\n",
-       "  41: 51.31666666666667,\n",
-       "  42: 246.96666666666667,\n",
-       "  43: 0,\n",
-       "  44: 123.85000000000001,\n",
-       "  45: 194.08333333333331,\n",
-       "  46: 0,\n",
-       "  47: 53.8,\n",
-       "  48: 0,\n",
-       "  49: 241.23333333333335,\n",
-       "  50: 9.983333333333333,\n",
-       "  51: 76.55000000000001,\n",
-       "  52: 139.60000000000002,\n",
-       "  53: 0,\n",
-       "  54: 0,\n",
-       "  55: 0,\n",
-       "  56: 110.85000000000001,\n",
-       "  57: 82.39999999999999,\n",
-       "  58: 133.66666666666666,\n",
-       "  59: 146.01666666666668,\n",
-       "  60: 95.66666666666667,\n",
-       "  61: 229.51666666666665,\n",
-       "  62: 325.2,\n",
-       "  63: 326.3666666666666,\n",
-       "  64: 227.35000000000002,\n",
-       "  65: 125.78333333333333,\n",
-       "  66: 0,\n",
-       "  67: 0,\n",
-       "  68: 437.08333333333337,\n",
-       "  69: 0,\n",
-       "  70: 79.01666666666667,\n",
-       "  71: 0,\n",
-       "  72: 0,\n",
-       "  73: 112.71666666666665,\n",
-       "  74: 21.816666666666666,\n",
-       "  75: 0,\n",
-       "  76: 42.41666666666667,\n",
-       "  77: 0,\n",
-       "  78: 42.68333333333334,\n",
-       "  79: 0,\n",
-       "  80: 42.35,\n",
-       "  81: 35.150000000000006,\n",
-       "  82: 49.150000000000006,\n",
-       "  83: 84.11666666666667,\n",
-       "  84: 0},\n",
-       " 'Hana': {0: 218.73333333333332,\n",
-       "  1: 718.1333333333334,\n",
-       "  2: 518.6333333333333,\n",
-       "  3: 458.41666666666663,\n",
-       "  4: 961.2833333333334,\n",
-       "  5: 783.5333333333333,\n",
-       "  6: 267.8666666666667,\n",
-       "  7: 324.28333333333336,\n",
-       "  8: 600.3666666666667,\n",
-       "  9: 681.0166666666665,\n",
-       "  10: 759.85,\n",
-       "  11: 114.51666666666668,\n",
-       "  12: 745.7166666666667,\n",
-       "  13: 646.9999999999999,\n",
-       "  14: 495.23333333333335,\n",
-       "  15: 426.73333333333335,\n",
-       "  16: 105.06666666666666,\n",
-       "  17: 518.1500000000001,\n",
-       "  18: 1037.7166666666665,\n",
-       "  19: 827.9333333333334,\n",
-       "  20: 826.5166666666667,\n",
-       "  21: 236.33333333333331,\n",
-       "  22: 285.58333333333326,\n",
-       "  23: 272.1000000000001,\n",
-       "  24: 234.43333333333334,\n",
-       "  25: 218.40000000000003,\n",
-       "  26: 282.03333333333336,\n",
-       "  27: 512.1166666666666,\n",
-       "  28: 112.44999999999999,\n",
-       "  29: 355.55,\n",
-       "  30: 441.06666666666666,\n",
-       "  31: 637.6999999999999,\n",
-       "  32: 600.5,\n",
-       "  33: 591.9333333333333,\n",
-       "  34: 607.4000000000001,\n",
-       "  35: 936.183333333333,\n",
-       "  36: 1285.9500000000003,\n",
-       "  37: 706.9166666666666,\n",
-       "  38: 525.3833333333334,\n",
-       "  39: 741.9166666666666,\n",
-       "  40: 505.4833333333333,\n",
-       "  41: 347.8166666666666,\n",
-       "  42: 878.6500000000002,\n",
-       "  43: 137.21666666666667,\n",
-       "  44: 827.5833333333331,\n",
-       "  45: 390.1333333333333,\n",
-       "  46: 374.8,\n",
-       "  47: 752.8999999999997,\n",
-       "  48: 748.2166666666666,\n",
-       "  49: 191.8,\n",
-       "  50: 590.9666666666668,\n",
-       "  51: 611.9666666666668,\n",
-       "  52: 372.45,\n",
-       "  53: 83.55000000000001,\n",
-       "  54: 0,\n",
-       "  55: 0,\n",
-       "  56: 63.483333333333334,\n",
-       "  57: 118.68333333333334,\n",
-       "  58: 253.71666666666667,\n",
-       "  59: 96.51666666666667,\n",
-       "  60: 415.53333333333336,\n",
-       "  61: 85.51666666666667,\n",
-       "  62: 134.14999999999998,\n",
-       "  63: 87.08333333333333,\n",
-       "  64: 458.8666666666667,\n",
-       "  65: 602.6666666666667,\n",
-       "  66: 628.4999999999999,\n",
-       "  67: 168.03333333333333,\n",
-       "  68: 19.0,\n",
-       "  69: 85.55,\n",
-       "  70: 584.8833333333333,\n",
-       "  71: 511.86666666666673,\n",
-       "  72: 297.18333333333334,\n",
-       "  73: 306.50000000000006,\n",
-       "  74: 719.2166666666669,\n",
-       "  75: 577.1833333333334,\n",
-       "  76: 543.4666666666667,\n",
-       "  77: 491.7,\n",
-       "  78: 372.9833333333333,\n",
-       "  79: 477.51666666666677,\n",
-       "  80: 612.1166666666667,\n",
-       "  81: 139.9,\n",
-       "  82: 435.68333333333334,\n",
-       "  83: 432.0166666666667,\n",
-       "  84: 365.3333333333333},\n",
-       " 'Tarik': {0: 904.6833333333333,\n",
-       "  1: 1491.2000000000003,\n",
-       "  2: 168.03333333333333,\n",
-       "  3: 560.2500000000001,\n",
-       "  4: 341.9666666666667,\n",
-       "  5: 1205.6499999999996,\n",
-       "  6: 879.0333333333334,\n",
-       "  7: 270.45,\n",
-       "  8: 309.7,\n",
-       "  9: 0,\n",
-       "  10: 0,\n",
-       "  11: 159.55,\n",
-       "  12: 0,\n",
-       "  13: 0,\n",
-       "  14: 346.0166666666666,\n",
-       "  15: 309.18333333333334,\n",
-       "  16: 33.03333333333333,\n",
-       "  17: 529.95,\n",
-       "  18: 15.35,\n",
-       "  19: 15.183333333333334,\n",
-       "  20: 0,\n",
-       "  21: 0,\n",
-       "  22: 0,\n",
-       "  23: 261.56666666666666,\n",
-       "  24: 74.44999999999999,\n",
-       "  25: 138.79999999999998,\n",
-       "  26: 371.29999999999995,\n",
-       "  27: 505.33333333333337,\n",
-       "  28: 294.9,\n",
-       "  29: 579.9666666666667,\n",
-       "  30: 393.48333333333335,\n",
-       "  31: 443.29999999999995,\n",
-       "  32: 89.53333333333333,\n",
-       "  33: 224.44999999999996,\n",
-       "  34: 11.733333333333333,\n",
-       "  35: 0,\n",
-       "  36: 187.33333333333334,\n",
-       "  37: 193.85,\n",
-       "  38: 0,\n",
-       "  39: 0,\n",
-       "  40: 0,\n",
-       "  41: 312.5,\n",
-       "  42: 295.8666666666666,\n",
-       "  43: 122.68333333333334,\n",
-       "  44: 179.75,\n",
-       "  45: 0,\n",
-       "  46: 54.81666666666666,\n",
-       "  47: 0,\n",
-       "  48: 0,\n",
-       "  49: 128.71666666666664,\n",
-       "  50: 0,\n",
-       "  51: 237.26666666666668,\n",
-       "  52: 26.233333333333334,\n",
-       "  53: 0,\n",
-       "  54: 0,\n",
-       "  55: 0,\n",
-       "  56: 0,\n",
-       "  57: 0,\n",
-       "  58: 61.45,\n",
-       "  59: 304.68333333333334,\n",
-       "  60: 321.4333333333334,\n",
-       "  61: 136.25,\n",
-       "  62: 124.33333333333334,\n",
-       "  63: 134.85,\n",
-       "  64: 0,\n",
-       "  65: 0,\n",
-       "  66: 0,\n",
-       "  67: 46.81666666666667,\n",
-       "  68: 272.8333333333333,\n",
-       "  69: 127.48333333333333,\n",
-       "  70: 482.50000000000006,\n",
-       "  71: 942.6333333333334,\n",
-       "  72: 151.79999999999998,\n",
-       "  73: 254.61666666666665,\n",
-       "  74: 387.7833333333334,\n",
-       "  75: 167.5,\n",
-       "  76: 0,\n",
-       "  77: 0,\n",
-       "  78: 0,\n",
-       "  79: 0,\n",
-       "  80: 0,\n",
-       "  81: 0,\n",
-       "  82: 0,\n",
-       "  83: 0,\n",
-       "  84: 9.133333333333333}}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "viewing_activity\n",
     "\n",
@@ -2247,12 +1982,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../data/week_activity.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(week_activity, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visu 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Both': {'Blacklist': 5658.816666666667,\n",
+       "  'Las Vegas 21': 121.83333333333331,\n",
+       "  'Coco': 89.51666666666667,\n",
+       "  'Passengers': 107.46666666666667,\n",
+       "  'Ted': 100.26666666666667,\n",
+       "  'Le Smoking': 34.416666666666664,\n",
+       "  'À la recherche du bonheur': 113.03333333333335,\n",
+       "  'Amis publics': 90.23333333333333,\n",
+       "  \"L'accusé\": 100.11666666666667,\n",
+       "  'Supergirl': 5.183333333333334,\n",
+       "  'Man of Steel': 134.03333333333333,\n",
+       "  'Hancock': 88.98333333333333,\n",
+       "  '13 Reasons Why': 887.8333333333333},\n",
+       " 'Hana': {'Another Life': 265.73333333333335,\n",
+       "  'Un plan parfait': 203.7,\n",
+       "  'Locke & Key': 903.4999999999999,\n",
+       "  'Squid Game': 468.81666666666666,\n",
+       "  'Tiny Pretty Things': 572.0166666666668,\n",
+       "  'Supergirl': 3865.9666666666662,\n",
+       "  'La casa de papel': 608.6499999999999,\n",
+       "  'Shadowhunters': 2291.8666666666663,\n",
+       "  'Shadow and Bone ': 400.93333333333334,\n",
+       "  'Les chroniques de Shannara': 823.8166666666667,\n",
+       "  'Le Monde secret des Emojis': 191.06666666666666,\n",
+       "  'A Christmas Prince': 265.1166666666667,\n",
+       "  'Rampage - Hors de contrôle': 104.55,\n",
+       "  \"Stardust, le mystère de l'étoile\": 122.53333333333333,\n",
+       "  'H2O': 55.53333333333333,\n",
+       "  'Blanche-Neige et le Chasseur': 117.11666666666667,\n",
+       "  'Le Chasseur et la Reine des glaces': 105.9,\n",
+       "  'The Haunting of Hill House': 45.266666666666666,\n",
+       "  \"L'Attaque des Titans\": 1196.633333333333,\n",
+       "  'Comment je suis devenu super-héros': 98.65,\n",
+       "  'Chouchou': 104.3,\n",
+       "  'Alta mar': 922.1500000000002,\n",
+       "  'Twilight - Chapitre 5 ': 98.91666666666667,\n",
+       "  'Twilight - chapitre 4\\xa0': 97.3,\n",
+       "  'Twilight - chapitre 3\\xa0': 111.23333333333333,\n",
+       "  'Twilight - chapitre 2\\xa0': 121.51666666666665,\n",
+       "  'Twilight - chapitre 1\\xa0': 112.88333333333333,\n",
+       "  'Ragnarök': 564.9333333333334,\n",
+       "  'Coco': 58.333333333333336,\n",
+       "  'Team USA ': 21.583333333333332,\n",
+       "  'Qui a tué Sara ?': 8.95,\n",
+       "  'ariana grande': 4.5,\n",
+       "  'Miss Americana': 17.933333333333334,\n",
+       "  'Les 100': 3596.0833333333326,\n",
+       "  'Wonder Woman': 146.6,\n",
+       "  'The One': 335.1833333333334,\n",
+       "  'Erased': 253.98333333333335,\n",
+       "  'Jamais froid aux yeux': 276.79999999999995,\n",
+       "  'Hunter X Hunter (2011)': 2850.416666666666,\n",
+       "  'Angel Beats !': 8.366666666666667,\n",
+       "  'La Cité invisible': 229.71666666666667,\n",
+       "  'Le Tigre blanc': 123.64999999999999,\n",
+       "  'Saint Seiya - Les Chevaliers du Zodiaque ': 149.36666666666667,\n",
+       "  'Winx Club': 21.9,\n",
+       "  'Miss Détective': 109.01666666666667,\n",
+       "  'Destin\\xa0': 304.06666666666666,\n",
+       "  'Pitch Perfect 3': 87.1,\n",
+       "  'Les nouvelles aventures de Sabrina': 2003.7499999999995,\n",
+       "  'Sugar Rush ': 420.83333333333337,\n",
+       "  'Spinning Out': 477.6833333333334,\n",
+       "  'Ostra': 9.5,\n",
+       "  'La Princesse de Chicago ': 94.0,\n",
+       "  'Murder': 3844.9666666666667,\n",
+       "  'Le jeu de la dame': 387.46666666666664,\n",
+       "  'Tout le monde à table': 527.8666666666667,\n",
+       "  'The Haunting of Bly Manor': 478.5666666666666,\n",
+       "  'Emily in Paris': 282.03333333333336,\n",
+       "  'Mets et merveilles': 46.983333333333334,\n",
+       "  \"L'alchimie de Noël\": 9.5,\n",
+       "  'Comme Cendrillon ': 83.03333333333333,\n",
+       "  'Sugar Rush': 1049.3166666666666,\n",
+       "  'La Princesse de Chicago': 97.60000000000001,\n",
+       "  'Le Nouveau stagiaire': 120.75,\n",
+       "  \"Zumbo's Just Desserts\": 1074.6999999999996,\n",
+       "  'Burlesque': 114.73333333333333,\n",
+       "  'Le dernier jour de ma vie': 16.416666666666668,\n",
+       "  'Cursed\\xa0': 543.9833333333333,\n",
+       "  'Next in Fashion': 449.16666666666663,\n",
+       "  'Work It': 86.48333333333333,\n",
+       "  'The Protector': 1241.2166666666672,\n",
+       "  'I Am Mother': 44.483333333333334,\n",
+       "  \"Bébé mode d'emploi\": 10.95,\n",
+       "  'Boys Over Flowers': 3.3833333333333333,\n",
+       "  'Comme des Bêtes': 9.2,\n",
+       "  'iBOY': 88.18333333333334,\n",
+       "  'Parcours sans faute': 27.683333333333334,\n",
+       "  'Dark': 441.46666666666664,\n",
+       "  'Raising the Bar': 94.33333333333333,\n",
+       "  'Albion': 29.833333333333336,\n",
+       "  'Les sirènes de Mako': 22.616666666666667,\n",
+       "  'Le cerveau, en bref': 18.55,\n",
+       "  'Salt': 42.733333333333334,\n",
+       "  'Battle': 94.91666666666667,\n",
+       "  'Murder Mystery': 90.26666666666667,\n",
+       "  'Mowgli ': 78.18333333333334,\n",
+       "  'Voyage au centre de la Terre 2 ': 75.26666666666667,\n",
+       "  'Insatiable': 442.28333333333336},\n",
+       " 'Tarik': {'Formula 1 ': 2396.083333333334,\n",
+       "  'Schumacher': 167.5,\n",
+       "  'La casa de papel': 659.7666666666669,\n",
+       "  'The Amazing Spider-Man': 124.63333333333333,\n",
+       "  'Élite': 1266.1833333333332,\n",
+       "  'Mohamed Dubois': 91.91666666666667,\n",
+       "  'The Imitation Game': 110.48333333333333,\n",
+       "  'Black Mirror': 284.78333333333336,\n",
+       "  '24 Heures chrono': 123.6,\n",
+       "  \"L'Art de l'espionnage\": 28.216666666666665,\n",
+       "  'House of Cards': 3264.95,\n",
+       "  'Lupin': 223.26666666666668,\n",
+       "  'Very Bad Trip 2': 97.31666666666666,\n",
+       "  'Very Bad Trip': 96.53333333333333,\n",
+       "  'Chambre 2806': 187.33333333333334,\n",
+       "  'Le jeu de la dame': 11.733333333333333,\n",
+       "  'Maradona au Mexique': 224.44999999999996,\n",
+       "  'Sully': 89.53333333333333,\n",
+       "  'The Final Year': 13.75,\n",
+       "  'Designated Survivor': 2498.083333333333,\n",
+       "  'Le Nouveau stagiaire': 115.51666666666665,\n",
+       "  'Narcos': 358.7833333333333,\n",
+       "  'Jeffrey Epstein\\xa0': 27.983333333333334,\n",
+       "  'The Last Dance': 548.35,\n",
+       "  'Anelka ': 93.63333333333334,\n",
+       "  'Merci patron!': 81.78333333333333,\n",
+       "  'Les Evadés': 138.18333333333334,\n",
+       "  'Snowden': 130.65,\n",
+       "  'Breaking Bad': 2979.433333333333,\n",
+       "  '13 Novembre ': 158.73333333333332}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "favorites = {\"Both\": {}, \"Hana\": {}, \"Tarik\": {}}\n",
+    "\n",
+    "for i in viewing_activity.index:\n",
+    "    if viewing_activity[\"Duration\"][i] > 3:\n",
+    "        if viewing_activity[\"Title\"][i] in favorites[viewing_activity[\"Profile Name\"][i]]:\n",
+    "            favorites[viewing_activity[\"Profile Name\"][i]][viewing_activity[\"Title\"][i]] \\\n",
+    "                += viewing_activity[\"Duration\"][i]\n",
+    "        else:\n",
+    "            favorites[viewing_activity[\"Profile Name\"][i]][viewing_activity[\"Title\"][i]] \\\n",
+    "                = viewing_activity[\"Duration\"][i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/favorites.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(favorites, f, ensure_ascii=False, indent=4)"
    ]
   }
  ],
