problème cadre visu3

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1965,10 +1965,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "viewing_activity\n",
-    "\n",
     "week_activity = {\"Both\": {}, \"Hana\": {}, \"Tarik\": {}}\n",
-    "\n",
     "\n",
     "for i in range(len(week_days)):\n",
     "    for k, v in week_activity.items():\n",
@@ -1991,6 +1988,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_activity_csv = []\n",
+    "    \n",
+    "for i in range(len(week_days)):\n",
+    "    temp = {\"Week\": i,\n",
+    "            \"Both\": week_activity[\"Both\"][i], \n",
+    "            \"Hana\":  week_activity[\"Hana\"][i], \n",
+    "            \"Tarik\": week_activity[\"Tarik\"][i]}\n",
+    "    week_activity_csv.append(temp)\n",
+    "\n",
+    "field_names = [\"Week\",\"Tarik\", \"Hana\", \"Both\"]\n",
+    "    \n",
+    "with open('../data/week_activity.csv', 'w') as csvfile:\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=field_names)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(week_activity_csv)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2008,147 +2028,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Both': {'Blacklist': 5658.816666666667,\n",
-       "  'Las Vegas 21': 121.83333333333331,\n",
-       "  'Coco': 89.51666666666667,\n",
-       "  'Passengers': 107.46666666666667,\n",
-       "  'Ted': 100.26666666666667,\n",
-       "  'Le Smoking': 34.416666666666664,\n",
-       "  'À la recherche du bonheur': 113.03333333333335,\n",
-       "  'Amis publics': 90.23333333333333,\n",
-       "  \"L'accusé\": 100.11666666666667,\n",
-       "  'Supergirl': 5.183333333333334,\n",
-       "  'Man of Steel': 134.03333333333333,\n",
-       "  'Hancock': 88.98333333333333,\n",
-       "  '13 Reasons Why': 887.8333333333333},\n",
-       " 'Hana': {'Another Life': 265.73333333333335,\n",
-       "  'Un plan parfait': 203.7,\n",
-       "  'Locke & Key': 903.4999999999999,\n",
-       "  'Squid Game': 468.81666666666666,\n",
-       "  'Tiny Pretty Things': 572.0166666666668,\n",
-       "  'Supergirl': 3865.9666666666662,\n",
-       "  'La casa de papel': 608.6499999999999,\n",
-       "  'Shadowhunters': 2291.8666666666663,\n",
-       "  'Shadow and Bone ': 400.93333333333334,\n",
-       "  'Les chroniques de Shannara': 823.8166666666667,\n",
-       "  'Le Monde secret des Emojis': 191.06666666666666,\n",
-       "  'A Christmas Prince': 265.1166666666667,\n",
-       "  'Rampage - Hors de contrôle': 104.55,\n",
-       "  \"Stardust, le mystère de l'étoile\": 122.53333333333333,\n",
-       "  'H2O': 55.53333333333333,\n",
-       "  'Blanche-Neige et le Chasseur': 117.11666666666667,\n",
-       "  'Le Chasseur et la Reine des glaces': 105.9,\n",
-       "  'The Haunting of Hill House': 45.266666666666666,\n",
-       "  \"L'Attaque des Titans\": 1196.633333333333,\n",
-       "  'Comment je suis devenu super-héros': 98.65,\n",
-       "  'Chouchou': 104.3,\n",
-       "  'Alta mar': 922.1500000000002,\n",
-       "  'Twilight - Chapitre 5 ': 98.91666666666667,\n",
-       "  'Twilight - chapitre 4\\xa0': 97.3,\n",
-       "  'Twilight - chapitre 3\\xa0': 111.23333333333333,\n",
-       "  'Twilight - chapitre 2\\xa0': 121.51666666666665,\n",
-       "  'Twilight - chapitre 1\\xa0': 112.88333333333333,\n",
-       "  'Ragnarök': 564.9333333333334,\n",
-       "  'Coco': 58.333333333333336,\n",
-       "  'Team USA ': 21.583333333333332,\n",
-       "  'Qui a tué Sara ?': 8.95,\n",
-       "  'ariana grande': 4.5,\n",
-       "  'Miss Americana': 17.933333333333334,\n",
-       "  'Les 100': 3596.0833333333326,\n",
-       "  'Wonder Woman': 146.6,\n",
-       "  'The One': 335.1833333333334,\n",
-       "  'Erased': 253.98333333333335,\n",
-       "  'Jamais froid aux yeux': 276.79999999999995,\n",
-       "  'Hunter X Hunter (2011)': 2850.416666666666,\n",
-       "  'Angel Beats !': 8.366666666666667,\n",
-       "  'La Cité invisible': 229.71666666666667,\n",
-       "  'Le Tigre blanc': 123.64999999999999,\n",
-       "  'Saint Seiya - Les Chevaliers du Zodiaque ': 149.36666666666667,\n",
-       "  'Winx Club': 21.9,\n",
-       "  'Miss Détective': 109.01666666666667,\n",
-       "  'Destin\\xa0': 304.06666666666666,\n",
-       "  'Pitch Perfect 3': 87.1,\n",
-       "  'Les nouvelles aventures de Sabrina': 2003.7499999999995,\n",
-       "  'Sugar Rush ': 420.83333333333337,\n",
-       "  'Spinning Out': 477.6833333333334,\n",
-       "  'Ostra': 9.5,\n",
-       "  'La Princesse de Chicago ': 94.0,\n",
-       "  'Murder': 3844.9666666666667,\n",
-       "  'Le jeu de la dame': 387.46666666666664,\n",
-       "  'Tout le monde à table': 527.8666666666667,\n",
-       "  'The Haunting of Bly Manor': 478.5666666666666,\n",
-       "  'Emily in Paris': 282.03333333333336,\n",
-       "  'Mets et merveilles': 46.983333333333334,\n",
-       "  \"L'alchimie de Noël\": 9.5,\n",
-       "  'Comme Cendrillon ': 83.03333333333333,\n",
-       "  'Sugar Rush': 1049.3166666666666,\n",
-       "  'La Princesse de Chicago': 97.60000000000001,\n",
-       "  'Le Nouveau stagiaire': 120.75,\n",
-       "  \"Zumbo's Just Desserts\": 1074.6999999999996,\n",
-       "  'Burlesque': 114.73333333333333,\n",
-       "  'Le dernier jour de ma vie': 16.416666666666668,\n",
-       "  'Cursed\\xa0': 543.9833333333333,\n",
-       "  'Next in Fashion': 449.16666666666663,\n",
-       "  'Work It': 86.48333333333333,\n",
-       "  'The Protector': 1241.2166666666672,\n",
-       "  'I Am Mother': 44.483333333333334,\n",
-       "  \"Bébé mode d'emploi\": 10.95,\n",
-       "  'Boys Over Flowers': 3.3833333333333333,\n",
-       "  'Comme des Bêtes': 9.2,\n",
-       "  'iBOY': 88.18333333333334,\n",
-       "  'Parcours sans faute': 27.683333333333334,\n",
-       "  'Dark': 441.46666666666664,\n",
-       "  'Raising the Bar': 94.33333333333333,\n",
-       "  'Albion': 29.833333333333336,\n",
-       "  'Les sirènes de Mako': 22.616666666666667,\n",
-       "  'Le cerveau, en bref': 18.55,\n",
-       "  'Salt': 42.733333333333334,\n",
-       "  'Battle': 94.91666666666667,\n",
-       "  'Murder Mystery': 90.26666666666667,\n",
-       "  'Mowgli ': 78.18333333333334,\n",
-       "  'Voyage au centre de la Terre 2 ': 75.26666666666667,\n",
-       "  'Insatiable': 442.28333333333336},\n",
-       " 'Tarik': {'Formula 1 ': 2396.083333333334,\n",
-       "  'Schumacher': 167.5,\n",
-       "  'La casa de papel': 659.7666666666669,\n",
-       "  'The Amazing Spider-Man': 124.63333333333333,\n",
-       "  'Élite': 1266.1833333333332,\n",
-       "  'Mohamed Dubois': 91.91666666666667,\n",
-       "  'The Imitation Game': 110.48333333333333,\n",
-       "  'Black Mirror': 284.78333333333336,\n",
-       "  '24 Heures chrono': 123.6,\n",
-       "  \"L'Art de l'espionnage\": 28.216666666666665,\n",
-       "  'House of Cards': 3264.95,\n",
-       "  'Lupin': 223.26666666666668,\n",
-       "  'Very Bad Trip 2': 97.31666666666666,\n",
-       "  'Very Bad Trip': 96.53333333333333,\n",
-       "  'Chambre 2806': 187.33333333333334,\n",
-       "  'Le jeu de la dame': 11.733333333333333,\n",
-       "  'Maradona au Mexique': 224.44999999999996,\n",
-       "  'Sully': 89.53333333333333,\n",
-       "  'The Final Year': 13.75,\n",
-       "  'Designated Survivor': 2498.083333333333,\n",
-       "  'Le Nouveau stagiaire': 115.51666666666665,\n",
-       "  'Narcos': 358.7833333333333,\n",
-       "  'Jeffrey Epstein\\xa0': 27.983333333333334,\n",
-       "  'The Last Dance': 548.35,\n",
-       "  'Anelka ': 93.63333333333334,\n",
-       "  'Merci patron!': 81.78333333333333,\n",
-       "  'Les Evadés': 138.18333333333334,\n",
-       "  'Snowden': 130.65,\n",
-       "  'Breaking Bad': 2979.433333333333,\n",
-       "  '13 Novembre ': 158.73333333333332}}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "favorites = {\"Both\": {}, \"Hana\": {}, \"Tarik\": {}}\n",
     "\n",
