ajout favorites.csv

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1899,8 +1899,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tuples = []\n",
+    "\n",
+    "for p, v in favorites.items():\n",
+    "    for t, d in v.items():\n",
+    "        tuples.append([p, t, round(d,2)])\n",
+    "        \n",
+    "df_favorites = pd.DataFrame(tuples,  columns =['Profile', 'Title', 'Duration'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('../data/favorites.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(favorites, f, ensure_ascii=False, indent=4)"
+    "    json.dump(favorites, f, ensure_ascii=False, indent=4)\n",
+    "    \n",
+    "    \n",
+    "df_favorites.to_csv('../data/favorites.csv', index=False, sep=';') "
    ]
   }
  ],
