correction bug visu2

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1774,7 +1774,10 @@
     }
    ],
    "source": [
-    "device_type = {\"Both\" : {}, \"Tarik\": {}, \"Hana\": {}, \"Kids\": {}}\n",
+    "device_type = {\"Both\" : {'Smartphone': 0, 'Ordinateur': 0}, \n",
+    "               \"Tarik\": {'Smartphone': 0, 'Ordinateur': 0}, \n",
+    "               \"Hana\": {'Smartphone': 0, 'Ordinateur': 0}, \n",
+    "               \"Kids\": {'Smartphone': 0, 'Ordinateur': 0}}\n",
     "\n",
     "for i in range(viewing_activity.shape[0]):\n",
     "    if viewing_activity[\"Device Type\"].values[i] in device_type[viewing_activity[\"Profile Name\"][i]]:\n",
