correction échelle couleur (0,1)

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -2073,7 +2073,7 @@
     "            if df_favorites[\"Profile\"][i] != \"Both\":\n",
     "                add_to_both.append([\"Both\", df_favorites[\"Title\"][i], \\\n",
     "                                   max(df_favorites[\"Duration\"][i], df_favorites[\"Duration\"][i])])\n",
-    "                color_level.append((100*df_favorites[\"Duration\"][j])/(df_favorites[\"Duration\"][i]+df_favorites[\"Duration\"][j]))\n",
+    "                color_level.append((df_favorites[\"Duration\"][j])/(df_favorites[\"Duration\"][i]+df_favorites[\"Duration\"][j]))\n",
     "                if i not in to_remove:\n",
     "                    to_remove.append(i)\n",
     "            if j not in to_remove:\n",
@@ -2087,9 +2087,9 @@
     "        if df_favorites[\"Profile\"][i] == \"Hana\":\n",
     "            color_level.append(0)\n",
     "        elif df_favorites[\"Profile\"][i] == \"Tarik\":\n",
-    "            color_level.append(100)\n",
+    "            color_level.append(1)\n",
     "        else:\n",
-    "            color_level.append(50)\n",
+    "            color_level.append(5)\n",
     "\n",
     "temp.insert(3, \"ColorLevel\", color_level)\n",
     "temp"
