--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -684,7 +684,7 @@
        "      <td>0</td>\n",
        "      <td>82</td>\n",
        "      <td>[Blacklist]</td>\n",
-       "      <td>[25.53]</td>\n",
+       "      <td>[49.14]</td>\n",
        "      <td>49.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -724,7 +724,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>[House of Cards]</td>\n",
-       "      <td>[31.18]</td>\n",
+       "      <td>[237.01]</td>\n",
        "      <td>237.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -734,7 +734,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>[House of Cards]</td>\n",
-       "      <td>[50.3]</td>\n",
+       "      <td>[216.01]</td>\n",
        "      <td>216.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -744,7 +744,7 @@
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>[House of Cards]</td>\n",
-       "      <td>[17.63]</td>\n",
+       "      <td>[127.45]</td>\n",
        "      <td>127.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -754,7 +754,7 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>[House of Cards, La casa de papel, 13 Novembre ]</td>\n",
-       "      <td>[49.5, 11.85, 39.9]</td>\n",
+       "      <td>[399.6, 44.17, 158.73]</td>\n",
        "      <td>602.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -764,7 +764,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>[House of Cards]</td>\n",
-       "      <td>[35.23]</td>\n",
+       "      <td>[174.73]</td>\n",
        "      <td>174.73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -786,18 +786,18 @@
        "753       Tarik  2020-04-11    5     0   \n",
        "754       Tarik  2020-04-10    4     0   \n",
        "\n",
-       "                                                Title            Durations  \\\n",
-       "0                                         [Blacklist]               [42.1]   \n",
-       "1                                         [Blacklist]              [42.02]   \n",
-       "2                                         [Blacklist]              [25.53]   \n",
-       "3                                         [Blacklist]                [9.3]   \n",
-       "4                                         [Blacklist]              [25.85]   \n",
-       "..                                                ...                  ...   \n",
-       "750                                  [House of Cards]              [31.18]   \n",
-       "751                                  [House of Cards]               [50.3]   \n",
-       "752                                  [House of Cards]              [17.63]   \n",
-       "753  [House of Cards, La casa de papel, 13 Novembre ]  [49.5, 11.85, 39.9]   \n",
-       "754                                  [House of Cards]              [35.23]   \n",
+       "                                                Title               Durations  \\\n",
+       "0                                         [Blacklist]                  [42.1]   \n",
+       "1                                         [Blacklist]                 [42.02]   \n",
+       "2                                         [Blacklist]                 [49.14]   \n",
+       "3                                         [Blacklist]                   [9.3]   \n",
+       "4                                         [Blacklist]                 [25.85]   \n",
+       "..                                                ...                     ...   \n",
+       "750                                  [House of Cards]                [237.01]   \n",
+       "751                                  [House of Cards]                [216.01]   \n",
+       "752                                  [House of Cards]                [127.45]   \n",
+       "753  [House of Cards, La casa de papel, 13 Novembre ]  [399.6, 44.17, 158.73]   \n",
+       "754                                  [House of Cards]                [174.73]   \n",
        "\n",
        "     TotalDuration  \n",
        "0            42.10  \n",
@@ -833,9 +833,9 @@
     "                    'Date' : str_date,\n",
     "                    'Day': day,\n",
     "                    'Week': week,\n",
-    "                    'Title' : [viewing_activity['Title'][j]],\n",
-    "                    'Durations' : [viewing_activity['Duration'][j]],\n",
-    "                    'TotalDuration' : 0}\n",
+    "                    'Title' : [],\n",
+    "                    'Durations' : [],\n",
+    "                    'TotalDuration' : 0.0}\n",
     "        same_day = True\n",
     "        while(same_day and j < viewing_activity.shape[0]):\n",
     "            if (viewing_activity['Profile Name'][j] == dict_temp[\"Profile Name\"]\n",
@@ -844,6 +844,10 @@
     "                    if viewing_activity['Title'][j] not in dict_temp[\"Title\"]:\n",
     "                            dict_temp[\"Title\"].append(viewing_activity['Title'][j])\n",
     "                            dict_temp[\"Durations\"].append(viewing_activity['Duration'][j])\n",
+    "                    else:\n",
+    "                        for k in range(len(dict_temp[\"Title\"])):\n",
+    "                            if (dict_temp[\"Title\"][k] == viewing_activity['Title'][j]):\n",
+    "                                dict_temp[\"Durations\"][k] += viewing_activity['Duration'][j]\n",
     "                    dict_temp[\"TotalDuration\"] += viewing_activity['Duration'][j]\n",
     "                j = j + 1\n",
     "            elif (viewing_activity['Date'][j] != dict_temp[\"Date\"]):\n",
@@ -1962,35 +1966,35 @@
        "      <td>Both</td>\n",
        "      <td>La casa de papel</td>\n",
        "      <td>608.63</td>\n",
-       "      <td>52.016304</td>\n",
+       "      <td>0.520163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Both</td>\n",
        "      <td>Le jeu de la dame</td>\n",
        "      <td>387.48</td>\n",
-       "      <td>2.938303</td>\n",
+       "      <td>0.029383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Both</td>\n",
        "      <td>Le Nouveau stagiaire</td>\n",
        "      <td>120.75</td>\n",
-       "      <td>48.891052</td>\n",
+       "      <td>0.488911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Both</td>\n",
        "      <td>Blacklist</td>\n",
        "      <td>5658.81</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Both</td>\n",
        "      <td>Las Vegas 21</td>\n",
        "      <td>121.83</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2004,35 +2008,35 @@
        "      <td>Tarik</td>\n",
        "      <td>Merci patron!</td>\n",
        "      <td>81.78</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Les Evadés</td>\n",
        "      <td>138.18</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>122</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Snowden</td>\n",
        "      <td>130.65</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Breaking Bad</td>\n",
        "      <td>2979.49</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>124</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>13 Novembre</td>\n",
        "      <td>158.73</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2041,17 +2045,17 @@
       ],
       "text/plain": [
        "    Profile                 Title  Duration  ColorLevel\n",
-       "0      Both      La casa de papel    608.63   52.016304\n",
-       "1      Both     Le jeu de la dame    387.48    2.938303\n",
-       "2      Both  Le Nouveau stagiaire    120.75   48.891052\n",
-       "3      Both             Blacklist   5658.81   50.000000\n",
-       "4      Both          Las Vegas 21    121.83   50.000000\n",
+       "0      Both      La casa de papel    608.63    0.520163\n",
+       "1      Both     Le jeu de la dame    387.48    0.029383\n",
+       "2      Both  Le Nouveau stagiaire    120.75    0.488911\n",
+       "3      Both             Blacklist   5658.81    0.500000\n",
+       "4      Both          Las Vegas 21    121.83    0.500000\n",
        "..      ...                   ...       ...         ...\n",
-       "120   Tarik         Merci patron!     81.78  100.000000\n",
-       "121   Tarik            Les Evadés    138.18  100.000000\n",
-       "122   Tarik               Snowden    130.65  100.000000\n",
-       "123   Tarik          Breaking Bad   2979.49  100.000000\n",
-       "124   Tarik          13 Novembre     158.73  100.000000\n",
+       "120   Tarik         Merci patron!     81.78    1.000000\n",
+       "121   Tarik            Les Evadés    138.18    1.000000\n",
+       "122   Tarik               Snowden    130.65    1.000000\n",
+       "123   Tarik          Breaking Bad   2979.49    1.000000\n",
+       "124   Tarik          13 Novembre     158.73    1.000000\n",
        "\n",
        "[125 rows x 4 columns]"
       ]
@@ -2089,7 +2093,7 @@
     "        elif df_favorites[\"Profile\"][i] == \"Tarik\":\n",
     "            color_level.append(1)\n",
     "        else:\n",
-    "            color_level.append(5)\n",
+    "            color_level.append(0.5)\n",
     "\n",
     "temp.insert(3, \"ColorLevel\", color_level)\n",
     "temp"
