modifs design front

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1856,9 +1856,9 @@
     "    \n",
     "for i in range(len(week_days)):\n",
     "    temp = {\"Week\": i,\n",
-    "            \"Both\": week_activity[\"Both\"][i], \n",
-    "            \"Hana\":  week_activity[\"Hana\"][i], \n",
-    "            \"Tarik\": week_activity[\"Tarik\"][i]}\n",
+    "            \"Both\": round(week_activity[\"Both\"][i]/60,2), \n",
+    "            \"Hana\":  round(week_activity[\"Hana\"][i]/60,2), \n",
+    "            \"Tarik\": round(week_activity[\"Tarik\"][i]/60,2)}\n",
     "    week_activity_csv.append(temp)\n",
     "\n",
     "field_names = [\"Week\",\"Tarik\", \"Hana\", \"Both\"]\n",
