--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -1856,12 +1856,12 @@
     "    \n",
     "for i in range(len(week_days)):\n",
     "    temp = {\"Week\": i,\n",
-    "            \"Both\": round(week_activity[\"Both\"][i]/60,2), \n",
+    "            \"Together\": round(week_activity[\"Both\"][i]/60,2), \n",
     "            \"Hana\":  round(week_activity[\"Hana\"][i]/60,2), \n",
     "            \"Tarik\": round(week_activity[\"Tarik\"][i]/60,2)}\n",
     "    week_activity_csv.append(temp)\n",
     "\n",
-    "field_names = [\"Week\",\"Tarik\", \"Hana\", \"Both\"]\n",
+    "field_names = [\"Week\",\"Tarik\", \"Hana\", \"Together\"]\n",
     "    \n",
     "with open('../data/week_activity.csv', 'w') as csvfile:\n",
     "    writer = csv.DictWriter(csvfile, fieldnames=field_names)\n",
